--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "nice2meetu",
+  "name": "meetopia",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "signal": "tsx server/index.ts",
+    "start:app": "concurrently \"npm run dev\" \"npm run signal\""
   },
   "dependencies": {
     "@auth/core": "^0.34.2",
@@ -35,12 +37,14 @@
     "@types/react-dom": "^18.2.0",
     "@types/simple-peer": "^9.11.8",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.1.0",
     "dotenv": "^16.3.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.0.0"
   }
 }
