--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "signal": "tsx server/index.ts",
-    "start:app": "concurrently \"npm run dev\" \"npm run signal\""
+    "build": "next build && cp -r public .next/standalone/ && cp -r .next/static .next/standalone/.next/",
+    "start": "node server/index.ts",
+    "signal": "ts-node server/index.ts",
+    "lint": "next lint"
   },
   "dependencies": {
     "@auth/core": "^0.34.2",
@@ -16,6 +15,7 @@
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
@@ -26,7 +26,10 @@
     "react-dom": "^18.2.0",
     "redis": "^4.7.0",
     "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "css-loader": "^6.8.1",
+    "postcss-loader": "^7.3.3",
+    "style-loader": "^3.3.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -38,7 +41,6 @@
     "@types/simple-peer": "^9.11.8",
     "autoprefixer": "^10.4.20",
     "concurrently": "^9.1.0",
-    "dotenv": "^16.3.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.1",
     "postcss": "^8.4.49",
