--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build && cp -r public .next/standalone/ && cp -r .next/static .next/standalone/.next/",
-    "start": "node server/index.ts",
-    "signal": "ts-node server/index.ts",
+    "start": "concurrently \"next start\" \"tsx server/index.ts\"",
+    "prod": "npm run build && npm start",
+    "signal": "tsx server/index.ts",
     "lint": "next lint"
   },
   "dependencies": {
@@ -15,6 +16,8 @@
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "critters": "^0.0.25",
+    "css-loader": "^6.8.1",
     "dotenv": "^16.3.1",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
@@ -22,29 +25,28 @@
     "mongoose": "^8.9.1",
     "next": "^14.0.0",
     "next-auth": "^4.24.11",
+    "postcss-loader": "^7.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "redis": "^4.7.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "css-loader": "^6.8.1",
-    "postcss-loader": "^7.3.3",
-    "style-loader": "^3.3.3"
+    "style-loader": "^3.3.3",
+    "tailwindcss": "^3.4.17",
+    "postcss": "^8.4.49",
+    "autoprefixer": "^10.4.20"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^5.0.0",
-    "@types/node": "^20.0.0",
+    "@types/node": "^20.17.10",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@types/simple-peer": "^9.11.8",
-    "autoprefixer": "^10.4.20",
     "concurrently": "^9.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.1",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
     "typescript": "^5.0.0"
