--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.17.10",
-    "@types/react": "^18.3.18",
+    "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@types/simple-peer": "^9.11.8",
+    "@types/socket.io": "^3.0.2",
+    "@types/socket.io-client": "^3.0.0",
     "concurrently": "^9.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.1",
