--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "types": ["react", "react-dom"],
+    "jsxImportSource": "react"
   },
   "include": [
     "next-env.d.ts",
