--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "tsc && next build && cp -r public .next/standalone/ && cp -r .next/static .next/standalone/.next/",
+    "build": "tsc --project tsconfig.json && next build && cp -r public .next/standalone/ && cp -r .next/static .next/standalone/.next/",
     "start": "concurrently \"next start\" \"tsx server/index.ts\"",
     "prod": "npm run build && npm start",
     "signal": "tsx server/index.ts",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@auth/core": "^0.34.2",
@@ -24,12 +25,12 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.1",
-    "next": "^14.0.0",
+    "next": "14.0.0",
     "next-auth": "^4.24.11",
     "postcss": "^8.4.49",
     "postcss-loader": "^7.3.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "redis": "^4.7.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
@@ -51,6 +52,6 @@
     "eslint-config-next": "15.1.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
-    "typescript": "^5.0.0"
+    "typescript": "5.0.4"
   }
 }
