--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,9 @@
       "@/*": [
         "./src/*"
       ]
-    }
+    },
+    "types": ["node", "react", "react-dom"],
+    "allowSyntheticDefaultImports": true
   },
   "include": [
     "next-env.d.ts",
