--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "tsc --project tsconfig.json && next build && cp -r public .next/standalone/ && cp -r .next/static .next/standalone/.next/",
+    "build": "next build && cp -r public .next/standalone/ && cp -r .next/static .next/standalone/.next/",
     "start": "concurrently \"next start\" \"tsx server/index.ts\"",
     "prod": "npm run build && npm start",
     "signal": "tsx server/index.ts",
@@ -35,15 +35,16 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "style-loader": "^3.3.3",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
+    "typescript": "5.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.17.10",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.0",
     "@types/simple-peer": "^9.11.8",
     "@types/socket.io": "^3.0.2",
     "@types/socket.io-client": "^3.0.0",
@@ -51,7 +52,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.1",
     "ts-node": "^10.9.2",
-    "tsx": "^4.19.2",
-    "typescript": "5.0.4"
+    "tsx": "^4.19.2"
   }
 }
