--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "ESNext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -29,9 +29,7 @@
       "@/*": [
         "./src/*"
       ]
-    },
-    "types": ["node", "react", "react-dom"],
-    "allowSyntheticDefaultImports": true
+    }
   },
   "include": [
     "next-env.d.ts",
@@ -39,7 +37,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "server/**/*.ts",
-    "types.d.ts"
+    "types.d.ts",
+    "src/types/**/*.d.ts"
   ],
   "exclude": [
     "node_modules"
