--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,14 @@
 services:
   - type: web
-    name: meetopia-app
+    name: meetopia-signaling
     env: node
     buildCommand: npm install && npm run build
-    startCommand: npm start
+    startCommand: node .next/standalone/server.js
     envVars:
       - key: NODE_ENV
         value: production
-      - key: CORS_ORIGIN
-        value: https://meetopia-e6cf5lzlg-bthecoders-projects.vercel.app
+      - key: PORT
+        value: 3000
+      - key: CORS_ORIGINS
+        value: https://meetopia-app.vercel.app,https://meetopia-signaling.onrender.com
     autoDeploy: true 
