--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: meetopia-signaling
     env: node
-    buildCommand: npm install && npm run build
-    startCommand: node .next/standalone/server.js
+    buildCommand: npm install && npm run build && tsc -p tsconfig.server.json
+    startCommand: npm run signal
     envVars:
       - key: NODE_ENV
         value: production
