--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "meetopia",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "next build && tsc -p tsconfig.server.json && cp -r public .next/standalone/ && cp -r .next/static .next/standalone/.next/",
+    "build": "rm -rf dist && tsc -p tsconfig.server.json && next build && cp -r public .next/standalone/ && cp -r .next/static .next/standalone/.next/",
     "start": "node dist/server/index.js",
     "prod": "npm run build && npm start",
     "signal": "node dist/server/index.js",
@@ -38,13 +39,13 @@
     "tailwindcss": "^3.4.17",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.17.10",
     "typescript": "5.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.17.10",
     "@types/simple-peer": "^9.11.8",
     "@types/socket.io": "^3.0.2",
     "@types/socket.io-client": "^3.0.0",
