--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "rm -rf dist && tsc -p tsconfig.server.json && next build && cp -r public .next/standalone/ && cp -r .next/static .next/standalone/.next/",
-    "start": "node --experimental-specifier-resolution=node dist/server/index.js",
-    "prod": "npm run build && npm start",
-    "signal": "node --experimental-specifier-resolution=node dist/server/index.js",
-    "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "build": "tsc -p tsconfig.server.json && next build",
+    "start": "node dist/server/index.js",
+    "signal": "node dist/server/index.js",
+    "lint": "next lint"
   },
   "dependencies": {
     "@auth/core": "^0.34.2",
