--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "rm -rf dist && tsc -p tsconfig.server.json && next build && cp -r server/public dist/server/",
+    "build": "next build && tsc -p tsconfig.server.json",
     "start": "node dist/server/index.js",
     "signal": "node dist/server/index.js",
     "lint": "next lint"
@@ -38,7 +38,8 @@
     "@types/react-dom": "18.2.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.17.10",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -49,7 +50,6 @@
     "concurrently": "^9.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.1",
-    "ts-node": "^10.9.2",
     "tsx": "^4.19.2"
   }
 }
