--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && tsc -p tsconfig.server.json",
+    "build": "tsc -p tsconfig.server.json && next build",
     "start": "node dist/server/index.js",
     "signal": "node dist/server/index.js",
     "lint": "next lint"
