Fix TypeScript compilation and server startup

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "tsc -p tsconfig.server.json && next build",
+    "clean": "rm -rf dist .next",
+    "build": "npm run clean && tsc -p tsconfig.server.json && next build && cp -r server/public dist/server/",
     "start": "node dist/server/index.js",
     "signal": "node dist/server/index.js",
     "lint": "next lint"
