--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: meetopia-signaling
     env: node
     buildCommand: npm install && npm run build
-    startCommand: node dist/server/index.js
+    startCommand: npm run start
     envVars:
       - key: NODE_ENV
         value: production
