--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "meetopia",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "clean": "rm -rf dist .next",
