--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "module": "CommonJS",
+    "module": "ESNext",
     "moduleResolution": "node",
     "outDir": "dist",
     "noEmit": false,
@@ -11,7 +11,8 @@
     "sourceMap": true,
     "allowJs": true,
     "checkJs": false,
-    "rootDir": "."
+    "rootDir": ".",
+    "types": ["node"]
   },
   "include": ["server/**/*"],
   "exclude": ["node_modules", ".next", "dist"]
