--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   },
   "dependencies": {
     "@auth/core": "^0.34.2",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.17.10",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
     "@vercel/speed-insights": "^1.1.0",
     "autoprefixer": "^10.4.20",
     "aws-sdk": "^2.1692.0",
@@ -35,12 +39,8 @@
     "socket.io-client": "^4.8.1",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.4.17",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.0",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.17.10",
-    "typescript": "5.0.4",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "5.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
