Add speed dating and blind date features

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,13 +3,12 @@
     "target": "es2018",
     "module": "commonjs",
     "outDir": "./dist",
-    "rootDir": "./",
-    "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node"
+    "strict": true,
+    "skipLibCheck": true,
+    "noImplicitAny": false
   },
-  "include": ["./**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["*.ts"],
+  "exclude": ["node_modules"]
 } 
