--- a/package.json
+++ b/package.json
@@ -15,14 +15,6 @@
   },
   "dependencies": {
     "@prisma/client": "^5.8.0",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/dotenv": "^6.1.1",
-    "@types/express": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20.10.6",
-    "@types/react": "^18.2.46",
-    "@types/react-dom": "^18.2.18",
-    "@types/socket.io": "^3.0.1",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
@@ -40,6 +32,27 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/body-parser": "^1.19.5",
+    "@types/connect": "^3.4.38",
+    "@types/cookie": "^0.6.0",
+    "@types/cors": "^2.8.17",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^5.0.0",
+    "@types/express-serve-static-core": "^5.0.6",
+    "@types/http-errors": "^2.0.4",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/mime": "^3.0.4",
+    "@types/node": "^22.13.10",
+    "@types/prop-types": "^15.7.14",
+    "@types/qs": "^6.9.18",
+    "@types/range-parser": "^1.2.7",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@types/scheduler": "^0.23.0",
+    "@types/send": "^0.17.4",
+    "@types/serve-static": "^1.15.7",
+    "@types/socket.io": "^3.0.1",
     "concurrently": "^8.2.2",
     "prisma": "^5.8.0",
     "ts-node": "^10.9.2"
