--- a/server/package.json
+++ b/server/package.json
@@ -10,16 +10,22 @@
     "postinstall": "npm run build"
   },
   "dependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.5",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "socket.io": "^4.7.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.5"
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/prop-types": "^15.7.14",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@types/scheduler": "^0.23.0",
     "ts-node-dev": "^2.0.0"
   }
-} 
+}
