--- a/render.yaml
+++ b/render.yaml
@@ -2,16 +2,16 @@ services:
   - type: web
     name: meetopia-signaling
     env: node
-    buildCommand: npm install && npm run build && mkdir -p dist/server/public && cp -r server/public/* dist/server/public/
+    buildCommand: npm install && npm run build
     startCommand: npm run start
     envVars:
       - key: NODE_ENV
         value: production
       - key: PORT
-        value: 3000
+        value: 3003
       - key: CORS_ORIGINS
-        value: https://meetopia-app.vercel.app,https://meetopia-signaling.onrender.com
-    healthCheckPath: /debug-env
+        value: https://meetopia-app.vercel.app,https://meetopia-signaling.onrender.com,https://meetopia-80ipqfy65-bthecoders-projects.vercel.app
+    healthCheckPath: /
     autoDeploy: true
     disk:
       name: tmp
