Fix server build configuration for Render deployment

--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: meetopia-signaling
     env: node
+    root: server
     buildCommand: npm install && npm run build
     startCommand: npm run start
     envVars:
