--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,14 @@
     "@types/node": "^20.10.5",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/uuid": "^10.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "socket.io": "^4.7.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "uuid": "^11.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
