--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,6 @@
     }
   ],
   "env": {
-    "NEXT_PUBLIC_SOCKET_URL": "https://meetopia-signaling.onrender.com"
+    "NEXT_PUBLIC_SOCKET_URL": "http://localhost:3003"
   }
 } 
