--- a/package.json
+++ b/package.json
@@ -84,7 +84,11 @@
     "@types/send": "^0.17.4",
     "@types/serve-static": "^1.15.7",
     "@types/socket.io": "^3.0.1",
+    "@typescript-eslint/eslint-plugin": "^8.33.0",
+    "@typescript-eslint/parser": "^8.33.0",
     "concurrently": "^8.2.2",
+    "eslint": "^9.28.0",
+    "eslint-config-next": "^15.3.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.0-beta.3",
     "prisma": "^5.8.0",
