Fix: Add Netlify CORS support for frontend connection - Added meeetopia.netlify.app to CORS origins in render.yaml - Added Netlify URL to server CORS_ORIGINS array - Added dynamic Netlify URL support in Express and Socket.IO CORS logic

--- a/render.yaml
+++ b/render.yaml
@@ -11,7 +11,7 @@ services:
       - key: PORT
         value: 3003
       - key: CORS_ORIGINS
-        value: https://meetopia.vercel.app,https://meetopiaapp.onrender.com,https://meetopia-80ipqfy65-bthecoders-projects.vercel.app
+        value: https://meetopia.vercel.app,https://meetopiaapp.onrender.com,https://meetopia-80ipqfy65-bthecoders-projects.vercel.app,https://meeetopia.netlify.app
     healthCheckPath: /
     autoDeploy: true
     disk:
