--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "db:test": "curl http://localhost:3000/api/db-test"
   },
   "dependencies": {
+    "@daily-co/daily-js": "^0.79.0",
     "@neondatabase/serverless": "^1.0.0",
     "@prisma/client": "^5.8.0",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@sentry/integrations": "^7.114.0",
     "@sentry/nextjs": "^9.24.0",
     "@types/uuid": "^10.0.0",
@@ -45,8 +47,13 @@
     "esbuild": "^0.25.5",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
+    "framer-motion": "^12.16.0",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^149.0.0",
     "helmet": "^8.1.0",
+    "ics": "^3.8.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.513.0",
     "next": "^15.3.3",
     "next-auth": "^4.24.5",
     "postcss": "^8.4.49",
@@ -56,7 +63,8 @@
     "socket.io-client": "^4.7.2",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.3.3",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^3.25.51"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
