--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "dev": "concurrently \"npm run dev:next\" \"npm run dev:server\"",
-    "dev:next": "next dev -p 3000",
+    "dev:next": "next dev -p 3001",
     "dev:server": "cd server && npm run dev",
     "build": "next build",
     "start": "next start",
@@ -59,6 +59,7 @@
     "postcss": "^8.4.49",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-native-get-random-values": "^1.11.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.7.2",
     "tailwindcss": "^3.4.17",
@@ -67,6 +68,7 @@
     "zod": "^3.25.51"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
