--- a/app.json
+++ b/app.json
@@ -1,3 +1,15 @@
 {
-  "expo": {}
+  "expo": {
+    "extra": {
+      "eas": {
+        "projectId": "37e69074-d079-4c60-a3c4-5d468645bcf1"
+      }
+    },
+    "ios": {
+      "bundleIdentifier": "com.bferrell514.meetopiaapp",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
+    }
+  }
 }
