--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "drizzle-orm": "^0.44.1",
     "emoji-picker-react": "^4.6.0",
     "esbuild": "^0.25.5",
+    "expo": "^53.0.12",
+    "expo-modules-autolinking": "^2.1.12",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "framer-motion": "^12.16.0",
