--- a/MeetopiaExpoApp/app.json
+++ b/MeetopiaExpoApp/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Meetopia",
-    "slug": "meetopia-video-chat",
+    "slug": "meetopia-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -16,20 +16,37 @@
     ],
     "ios": {
       "supportsTablet": false,
-      "bundleIdentifier": "com.meetopia.videochat",
+      "bundleIdentifier": "com.bferrell514.meetopiaapp",
       "buildNumber": "1",
       "infoPlist": {
         "NSCameraUsageDescription": "Meetopia uses your camera for video calls to connect you with new people around the world.",
-        "NSMicrophoneUsageDescription": "Meetopia uses your microphone for audio during video calls."
+        "NSMicrophoneUsageDescription": "Meetopia uses your microphone for audio during video calls.",
+        "NSPhotoLibraryUsageDescription": "Meetopia may access your photo library to let you share images in conversations."
       },
-      "requireFullScreen": true
+      "requireFullScreen": true,
+      "privacyManifests": {
+        "NSPrivacyAccessedAPITypes": [
+          {
+            "NSPrivacyAccessedAPIType": "NSPrivacyAccessedAPICategoryCamera",
+            "NSPrivacyAccessedAPITypeReasons": ["DDA9.1"]
+          },
+          {
+            "NSPrivacyAccessedAPIType": "NSPrivacyAccessedAPICategoryMicrophone", 
+            "NSPrivacyAccessedAPITypeReasons": ["C617.1"]
+          }
+        ]
+      },
+      "config": {
+        "usesNonExemptEncryption": false
+      },
+      "associatedDomains": ["applinks:meetopia.vercel.app"]
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#111827"
       },
-      "package": "com.meetopia.videochat",
+      "package": "com.bferrell514.meetopiaapp",
       "versionCode": 1,
       "permissions": [
         "CAMERA",
@@ -50,12 +67,16 @@
         }
       ],
       "expo-audio",
-      "expo-video"
+      "expo-video",
+      "expo-web-browser"
     ],
     "extra": {
       "eas": {
-        "projectId": "3e59c907-edb8-4962-87b2-2ad38ccf01b1"
+        "projectId": "37e69074-d079-4c60-a3c4-5d468645bcf1"
       }
-    }
+    },
+    "privacy": "https://meetopia.vercel.app/privacy",
+    "primaryColor": "#6366f1",
+    "description": "Connect with amazing people around the world through secure video conversations. Every conversation is a new adventure waiting to unfold."
   }
 }
