--- a/MeetopiaExpoApp/package.json
+++ b/MeetopiaExpoApp/package.json
@@ -18,7 +18,7 @@
     "@react-navigation/stack": "^7.3.4",
     "axios": "^1.10.0",
     "base-64": "^1.0.0",
-    "expo": "^53.0.11",
+    "expo": "53.0.12",
     "expo-audio": "~0.4.6",
     "expo-auth-session": "^6.2.0",
     "expo-camera": "~16.1.8",
@@ -29,11 +29,11 @@
     "expo-notifications": "^0.31.3",
     "expo-secure-store": "^14.2.3",
     "expo-status-bar": "^2.2.3",
-    "expo-video": "~2.2.1",
-    "expo-web-browser": "~14.1.6",
+    "expo-video": "~2.2.2",
+    "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
     "react-dom": "^19.0.0",
-    "react-native": "0.79.3",
+    "react-native": "0.79.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "~3.17.4",
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "canvas": "^3.1.0",
     "typescript": "^5.3.3"
   },
   "private": true
