--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "overrides": {
-    "esbuild": "^0.25.5"
+    "esbuild": "^0.25.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "scripts": {
     "dev": "concurrently \"npm run dev:next\" \"npm run dev:server\"",
@@ -24,9 +26,7 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "db:test": "curl http://localhost:3000/api/db-test",
-    "android": "expo run:android",
-    "ios": "expo run:ios"
+    "db:test": "curl http://localhost:3000/api/db-test"
   },
   "dependencies": {
     "@daily-co/daily-js": "^0.79.0",
@@ -47,8 +47,6 @@
     "drizzle-orm": "^0.44.1",
     "emoji-picker-react": "^4.6.0",
     "esbuild": "^0.25.5",
-    "expo": "^53.0.12",
-    "expo-modules-autolinking": "^2.1.12",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "framer-motion": "^12.16.0",
@@ -68,8 +66,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.3.3",
     "uuid": "^11.1.0",
-    "zod": "^3.25.51",
-    "react-native": "0.79.4"
+    "zod": "^3.25.51"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -92,8 +89,8 @@
     "@types/prop-types": "^15.7.14",
     "@types/qs": "^6.9.18",
     "@types/range-parser": "^1.2.7",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@types/scheduler": "^0.23.0",
     "@types/send": "^0.17.4",
     "@types/serve-static": "^1.15.7",
