Fix Vercel build: Remove Daily.co, add Jitsi service, fix tsconfig includes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,12 +32,16 @@
   },
   "include": [
     "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "lib/**/*.ts",
+    "lib/**/*.tsx",
+    "server/**/*.ts",
+    "server/**/*.tsx",
     ".next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
-  ],
-  "extends": "expo/tsconfig.base"
+    "node_modules",
+    "MeetopiaExpoApp"
+  ]
 }
