--- a/MeetopiaExpoApp/package.json
+++ b/MeetopiaExpoApp/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@jitsi/react-native-sdk": "^11.2.4",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.3.15",
