Fix: Remove daily-service.ts and update privacy URL

--- a/MeetopiaExpoApp/app.json
+++ b/MeetopiaExpoApp/app.json
@@ -44,12 +44,10 @@
       "favicon": "./assets/favicon.png"
     },
     "extra": {
-      "eas": {
-        "projectId": "your-project-id-here"
-      }
+      "eas": {}
     },
     "privacy": {
-      "privacyPolicyUrl": "https://meetopia.vercel.app/privacy"
+      "privacyPolicyUrl": "https://meeetopia.vercel.app/privacy"
     },
     "category": "SOCIAL_NETWORKING",
     "contentRights": {
