--- a/MeetopiaExpoApp/package.json
+++ b/MeetopiaExpoApp/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/stack": "^7.3.4",
     "axios": "^1.10.0",
     "base-64": "^1.0.0",
-    "expo": "53.0.12",
+    "expo": "^53.0.12",
     "expo-audio": "~0.4.6",
     "expo-auth-session": "^6.2.0",
     "expo-camera": "~16.1.8",
