Fix: Resolve TestFlight rejection - Remove App-minimal.tsx and conflicting auth routing
- Delete App-minimal.tsx that showed 'Coming Soon' static screen
- Rename src/App.tsx to App-with-auth.tsx to prevent auth routing conflicts
- Install missing dependencies: expo-linear-gradient, expo-audio, expo-secure-store, etc.
- Update app version to 1.0.1 and build number to 2
- Fix React version mismatch (react-dom 19.0.0)
- App now shows full functional interface instead of splash screen
- Ready for TestFlight resubmission

--- a/MeetopiaExpoApp/app.json
+++ b/MeetopiaExpoApp/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
     "name": "Meetopia",
-    "slug": "meetopia",
-    "version": "1.0.0",
+    "slug": "meetopia-app",
+    "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/adaptive-icon.png",
     "userInterfaceStyle": "automatic",
@@ -17,7 +17,7 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.meetopia.app",
-      "buildNumber": "1",
+      "buildNumber": "2",
       "infoPlist": {
         "NSCameraUsageDescription": "Meetopia needs camera access to enable video calls and connections with other users.",
         "NSMicrophoneUsageDescription": "Meetopia needs microphone access to enable voice communication during video calls.",
