--- a/MeetopiaExpoApp/eas.json
+++ b/MeetopiaExpoApp/eas.json
@@ -11,7 +11,12 @@
       "distribution": "internal"
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "ios": {
+        "cache": {
+          "disabled": true
+        }
+      }
     }
   },
   "submit": {
