--- a/MeetopiaExpoApp/package.json
+++ b/MeetopiaExpoApp/package.json
@@ -15,10 +15,13 @@
     "@react-navigation/bottom-tabs": "^7.3.15",
     "@react-navigation/native": "^7.1.11",
     "@react-navigation/native-stack": "^7.3.14",
+    "@types/axios": "^0.9.36",
+    "axios": "^1.10.0",
     "expo": "^53.0.12",
     "expo-audio": "^0.4.6",
     "expo-auth-session": "^6.2.0",
     "expo-camera": "~16.1.8",
+    "expo-constants": "^17.1.6",
     "expo-crypto": "^14.1.5",
     "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.1.5",
