--- a/MeetopiaExpoApp/package.json
+++ b/MeetopiaExpoApp/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/runtime": "^7.27.6",
     "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/netinfo": "^11.4.1",
@@ -28,7 +29,8 @@
     "expo-modules-autolinking": "^2.1.12",
     "expo-secure-store": "^14.2.3",
     "expo-status-bar": "^2.2.3",
-    "react": "19.0.0",
+    "invariant": "^2.2.4",
+    "react": "^19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
     "react-native-gesture-handler": "~2.24.0",
@@ -36,7 +38,8 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.11.1",
     "react-native-svg": "15.11.2",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "scheduler": "^0.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
