--- a/MeetopiaExpoApp/package.json
+++ b/MeetopiaExpoApp/package.json
@@ -26,7 +26,6 @@
     "expo-crypto": "^14.1.5",
     "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.1.5",
-    "expo-modules-autolinking": "^2.1.12",
     "expo-secure-store": "^14.2.3",
     "expo-status-bar": "^2.2.3",
     "invariant": "^2.2.4",
@@ -45,6 +44,13 @@
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "typescript": "^5.3.3"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
   },
   "private": true
 }
